# libargparse

./: .gitignore  .gitmodules  Makefile  Makefile.am  Makefile.old  README.md  a.out  argparse.c  argparse.h  configure.ac
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: c-cpp.yml  release.yml  tag.yml
include/: Makefile.am  argparse.h  tests.hpp
lib/: Makefile.am
src/: Makefile.am  argparse.c
tests/: Makefile.am  main.cpp  tests.cpp
